<resources>
    <string name="app_name">Movilidad</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="inicio">Inicio</string>
    <string name="nuevo_viaje">Nuevo Viaje</string>
    <string name="new_trip">Nuevo viaje</string>
    <string name="comparative">Comparativo</string>
    <string name="record">Historial</string>
    <string name="more">Más</string>
    <string name="campus">Sede</string>
    <string name="select_your_campus">Selecciona tu sede</string>
    <string name="error_no_internet">No hay internet</string>
    <string name="error_unkwnow">Error desconocido</string>
    <string name="mi_huella">Mi Huella CO<small>2</small></string>

    <string-array name="places">
        <item>Torre BBVA</item>
        <item>Parques Polanco</item>
    </string-array>

    <!-- home -->
    <string name="welcome_user">Hola, %s</string>

    <!-- onboarding -->
    <string name="co">CO<small>2</small></string>
    <string name="welcome">Bienvenido a mi Huella CO<small>2</small></string>
    <string name="welcome_text">Un programa que apoya la movilidad sostenible y a medir las emisiones de carbono CO<small>2</small> de los colaboradores en BBVA al transportarse a sus sedes</string>
    <string name="second_title">¿Por qué medir las emisiones de CO<small>2e</small>?</string>
    <string name="second_text">Queremos compartir el nivel de CO<small>2e</small> que genera cada medio de transporte. Con tu registro ayudamos a medir nuestro impacto en el planeta </string>
    <string name="autorizar">Autorizar</string>
    <string name="thirth_title">Al reducir tus emisiones de carbono, ganas</string>
    <string name="thirth_text">Entre más viajes registres y cambies a modos menos contaminantes, podrás acumular mayor cantidad de puntos</string>

    <!--alert -->
    <string name="alert_gps_text_two">\"Autorizo el acceso a la ubicación de mi dispositivo durante el uso de la aplicación en términos del Aviso de Privacidad\"</string>
    <string name="alert_gps_text_one">Para calcilar los km recorridos de tu ruta se requiere validar tu ubicación</string>
    <string name="alert_title_gps">Permisos de activación GPS</string>
    <string name="home_text">Entre más recorridos agregues a tu sede, más puntos podrás ganar. \n \n \n  Recuerda que si optas por medios de transporte más sustentables, generas menos CO2e y por lo tanto podrás ganar más puntos. \n \n \n Si ocupas más de un transporte, asegúrate de agregarlo en el momento para que la medición de emisiones y puntos sea más certera.</string>
    <string name="cancel">Cancelar</string>
    <string name="notice_privacy">Ver aviso de privacidad</string>

    <!-- new trip -->
    <string name="your_location">Tu ubicación</string>
    <string name="destination">Camino a: %s</string>
    <string name="current_location">Inicio: %s</string>
    <string name="type_of_transport">Tipo de transporte: Bicicleta</string>

    <!-- items -->
    <string name="emission">Genera %sg de CO<small>2e</small> por km</string>
    <string name="trasnportation_type">Medio de transporte</string>
    <string name="text_current_trip">De ser necesario puedes agregar otro medio de transporte; recuerda hacerlo en el momento que hacer cambio para una mejor precisión en el cálculo de puntos y emisiones CO2e</string>
    <string name="end_trip">Terminar viaje</string>
    <string name="add_transportation">Agregar medio</string>
    <string name="generate_low">Generación de CO<small>2e</small> bajo</string>
    <string name="generate_medium">Generación de CO<small>2e</small> medio</string>
    <string name="generate_high">Generación de CO<small>2e</small> alto</string>
    <string name="selecciona_transporte">Seleecciona tu transporte</string>
    <string name="current_trip">En trayecto</string>
    <string name="Prueba">prueba</string>
</resources>