<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="174dp"
        android:fontFamily="@font/benton_sans_bbva_book"
        android:padding="8dp"
        android:text="@string/alert_title_gps"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_margin="32dp"
        android:layout_height="480dp"
        android:background="@color/grey_dialog_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:padding="16dp"
            android:text="@string/alert_gps_text_one"
            android:textColor="@color/grey_dialog_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/alert_gps_text_two"
            android:textColor="@color/grey_dialog_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="149dp"
            android:layout_marginBottom="175dp"
            android:text="@string/notice_privacy"
            android:textColor="@color/bbvaCoreBlue"
            android:fontFamily="@font/benton_sans_bbva_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tvPrivacy"
            app:layout_constraintEnd_toStartOf="@+id/tvPrivacy"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvPrivacy"
            app:srcCompat="@drawable/ic_file" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:text="@string/autorizar"
        android:textColor="@color/white"
        android:theme="@style/BBVAButton"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="@+id/btnCancel" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:text="@string/cancel"
        android:textColor="@color/bbvaCoreBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.80" />

    <ImageButton
        android:id="@+id/ibCanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:srcCompat="@drawable/ic_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>