<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.newtrip.CurrentTripFragment">

    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:background="@color/bbvaMediumAqua">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_gps"
            app:layout_constraintEnd_toEndOf="@+id/imageView13"
            app:layout_constraintStart_toStartOf="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_sede"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_divider"
            app:layout_constraintEnd_toEndOf="@+id/imageView13"
            app:layout_constraintStart_toStartOf="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

        <TextView
            android:id="@+id/tvEndTrip"
            style="@style/NormalTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="Camino a: "
            app:layout_constraintBottom_toBottomOf="@+id/imageView13"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toTopOf="@+id/imageView13" />

        <TextView
            android:id="@+id/tvStartTrip"
            style="@style/NormalTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Inicio: "
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toStartOf="@+id/tvEndTrip"
            app:layout_constraintTop_toTopOf="@+id/imageView10" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:textColor="@color/black_text"
            android:text="@string/text_current_trip"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAddTransportation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16">


        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btnEndTrip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bbvaCoreBlue"
            android:fontFamily="@font/benton_sans_bbva_bold"
            android:textColor="@color/white"
            android:text="@string/end_trip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAddTransportation"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnAddTransportation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/benton_sans_bbva_bold"
            android:text="@string/add_transportation"
            android:textColor="@color/bbvaCoreBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnEndTrip" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>