<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.newtrip.NewTripFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:background="@color/bbvaMediumAqua">


        <TextView
            android:id="@+id/etAddress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="36dp"
            android:background="@color/white_background_text"
            android:ems="10"
            android:fontFamily="@font/benton_sans_bbva_book"
            android:gravity="center|start"
            android:paddingStart="50dp"
            android:textColor="@color/grey_dialog_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Polanco 43" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/benton_sans_bbva_book"
            android:text="@string/your_location"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="@+id/etAddress"
            app:layout_constraintStart_toStartOf="@+id/etAddress"
            app:layout_constraintTop_toTopOf="@+id/etAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/benton_sans_bbva_book"
            android:padding="32dp"
            android:text="Selecciona la sede BBVA a la cuál te dirigirás, después elige tu medio de transporte."
            android:textColor="@color/black_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            style="@style/CustomTextCatalogPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />

        <TextView
            android:id="@+id/textView17"
            style="@style/CustomTextCatalogPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/type_of_transport"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="@+id/imageView12" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_cede"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="24dp"
            android:background="@color/grey_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="24dp"
            android:background="@color/grey_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_tipo_transporte"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="200dp"-->
        <!--            android:backgroundTint="@color/bbvaCoreBlue"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/textView15" >-->


        <!--            <TextView-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="57dp"-->
        <!--                android:background="@color/white"-->
        <!--                android:text="Hola"-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView8"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:src="@drawable/ic_file" />-->
        <!--        </androidx.cardview.widget.CardView>-->
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>